# qa-agent

./: .gitignore  README.md  pyproject.toml
examples/: cases.csv
src/: llm.py  main.py
src/browser_operator/browser_use/: agent.py  browser.py  browser_config.py
src/execution_input/: csv_input_validator.py  execution_input.py
src/execution_result/: execution_result.py  stdout.py
