[project]
name = "qa-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browser-use==0.1.37",
    "fire>=0.7.0",
    "isort>=6.0.0",
    "langchain-google-genai>=2.0.8",
    "typer>=0.15.1",
]

[tool.mypy]
ignore_missing_imports = true
